feat: implement the multiple view types logic for the recycler view

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,6 @@
     <color name="color_primary_black_dark">#303841</color>
     <color name="gray">#A7A9B7</color>
     <color name="white_transparency">#50FFFFFF</color>
+    <color name="primary">#5761B2</color>
+    <color name="primary_100">#D5D7EC</color>
 </resources>
