--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,6 +16,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginBottom="10dp"
         android:paddingHorizontal="10dp"
         app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">
 
@@ -32,7 +33,8 @@
             android:layout_height="0dp"
             app:layout_constraintTop_toBottomOf="@id/search_layout"
             tools:itemCount="5"
-            tools:listitem="@layout/item_game" />
+            app:layout_constraintBottom_toBottomOf="parent"
+            tools:listitem="@layout/item_home" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
