--- a/app/src/main/res/layout/view_collapsing_appbar.xml
+++ b/app/src/main/res/layout/view_collapsing_appbar.xml
@@ -4,6 +4,7 @@
     android:id="@+id/appbar_container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/black"
     android:fitsSystemWindows="true"
     android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
 
@@ -11,7 +12,7 @@
         app:contentScrim="@color/white"
         app:layout_scrollFlags="scroll|exitUntilCollapsed"
         android:layout_width="match_parent"
-        android:layout_height="300dp"
+        android:layout_height="200dp"
         android:fitsSystemWindows="true">
 
         <FrameLayout
